Переделел index.html во всех состояниях

--- a/source/sass/blocks/about.scss
+++ b/source/sass/blocks/about.scss
@@ -1,9 +1,15 @@
 .about {
-  padding: 0 30px;
-  padding-bottom: 30px;
-  margin-top: 27px;
+  box-sizing: border-box;
+  //padding: 0 30px;
+  padding-bottom: 100px;
+  //margin-top: 27px;
   border-bottom: 2px solid #f1f1f1;
   color: #000000;
+}
+
+.about__title-wrapper {
+  width: 320px;
+  margin: 0 auto;
 }
 
 .about__title {
@@ -13,53 +19,95 @@
   letter-spacing: -2px;
   margin: 0;
   margin-top: 25px;
+  letter-spacing: 0.1px;
+}
+
+.about__title--about {
+  padding-left: 28px;
+}
+
+.about__title--review {
+  padding: 0 30px;
+  padding-top: 20px;
+  padding-left: 0;
 }
 
 .about__list {
+  width: 320px;
   font-size: 17px;
   line-height: 20px;
   font-weight: bold;
   list-style-type: none;
-  margin: 0;
-  margin-top: 15px;
+  margin: 0 auto;
+  //margin-top: 15px;
   padding: 0;
   display: flex;
   flex-direction: column;
 }
 
 .about__item {
-  min-height: 100px;
+  //min-height: 100px;
   //position: relative;
   display: flex;
   flex-direction: column;
+  padding-left: 28px;
+  //padding-right: 50px;
+  //padding-top: 20px;
+  min-height: 125px;
 }
 
-.about__link {
-  text-decoration: none;
-  color: #000000;
-  display: inline-block;
-  width: 100%;
-  box-sizing: border-box;
-  padding-top: 17px;
-  padding-bottom: 24px;
+.about__item--prev {
+  width: 50px;
+  min-height: 30px;
+  padding-left: 37px;
+}
+
+.about__item--next {
+  width: 50px;
+  min-height: 30px;
+  padding-right: 40px;
 }
 
 .about__svg {
-  //position: absolute;
-  //top: 10px;
-  width: 50px;
-  margin-top: 10px;
+  width: 44px;
+  padding-top: 30px;
+  //margin-top: 10px;
   //height: 40px;
   //background-color: #fffccc;
   text-align: center;
 }
 
+.about__svg--local {
+  padding-top: 25px;
+}
+
+.about__svg--present {
+  padding-top: 20px;
+}
+
+.about__link {
+  text-decoration: none;
+  color: #000000;
+  //display: inline-block;
+  width: 100%;
+  box-sizing: border-box;
+  padding-top: 17px;
+  //padding-bottom: 24px;
+}
+
+.about__link--handmade {
+  padding-top: 9px;
+}
+
+.about__link--local {
+  padding-top: 23px;
+}
+
 .about__text {
   margin: 0;
-  margin-top: 30px;
-  font-size: 15px;
-  line-height: 30px;
-  font-weight: 400;
+  font-size: 17px;
+  line-height: 20px;
+  font-weight: 700;
   color: #444444;
 }
 
@@ -68,7 +116,14 @@
   font-size: 17px;
   line-height: 30px;
   font-weight: bold;
-  margin-top: 20px;
+  margin-top: 24px;
+}
+
+.about__list--arrows {
+  flex-direction: row;
+  justify-content: space-between;
+  width: 260px;
+  padding-top: 42px;
 }
 
 .about__span {
@@ -107,19 +162,46 @@
   text-decoration: none;
   text-transform: uppercase;
   border: 2px solid #444444;
-  width: 100%;
+  width: 255px;
   text-align: center;
   padding: 14px 0;
+  position: absolute;
+  top: 505px;
+
+}
+
+.about-comments {
+    width: 320px;
+    margin: 0 auto;
+    font-size: 15px;
+    line-height: 30px;
+    padding: 0 30px;
+    box-sizing: border-box;
+}
+
+.about__title-wrapper--review {
+  position: relative;
+}
+
+.about__comment {
+  margin: 0;
+  margin-top: 23px;
 }
 
 @media (min-width: 768px) {
   .about {
-    /*background-image: url("../../img/review@1x.jpg");
-    background-repeat: no-repeat;
-    background-size: 350px 450px;
-    background-position: 0 640px;*/
-    padding: 0;
     margin-top: 0;
+  }
+
+  .about__list {
+    width: 768px;
+    margin: 0 auto;
+    box-sizing: border-box;
+    flex-direction: row;
+    flex-wrap: wrap;
+    padding-top: 48px;
+    justify-content: center;
+    align-items: baseline;
   }
 
   .about__title-wrapper {
@@ -128,14 +210,14 @@
     padding: 0 50px;
     padding-top: 78px;
     padding-left: 48px;
-    box-sizing: border-box;
+    //box-sizing: border-box;
   }
 
   .about__title-wrapper--review {
     padding: 0;
-    padding-top: 102px;
-    box-sizing: border-box;
-    display: flex;
+    padding-top: 87px;
+    //box-sizing: border-box;
+    flex-wrap: wrap;
     flex-direction: row;
     justify-content: space-between;
   }
@@ -146,6 +228,11 @@
     letter-spacing: -0.3px;
     display: inline-block;
     margin-top: 0;
+    padding-left: 0;
+  }
+
+  .about__title--about {
+    padding-left: 47px;
   }
 
   .about__link {
@@ -154,7 +241,7 @@
     font-weight: bold;
     letter-spacing: 0;*/
     padding: 0;
-    padding-top: 13px;
+    padding-top: 10px;
     //padding-right: 50px;
     padding-bottom: 58px;
     margin-left: -3px;
@@ -168,9 +255,12 @@
     line-height: 22px;
     letter-spacing: 0;
     font-weight: bold;
+    padding-top: 5px;
   }
 
-  .about__text--eco {
+
+
+  /*.about__text--eco {
     width: 230px;
   }
 
@@ -196,18 +286,7 @@
   .about__text--present {
     padding-top: 2px;
     padding-left: 4px;
-  }
-
-  .about__list {
-    width: 768px;
-    margin: 0 auto;
-    box-sizing: border-box;
-    flex-direction: row;
-    flex-wrap: wrap;
-    padding-top: 48px;
-    justify-content: center;
-    align-items: baseline;
-  }
+  }*/
 
   .about-comments {
     width: 768px;
@@ -228,12 +307,15 @@
 
   .about__item {
     width: 330px;
+    padding: 0;
+    box-sizing: border-box;
     //margin-top: 8px;
     //margin-bottom: 18px;
   }
 
   .about__svg {
     margin-top: 0;
+    padding-top: 0;
   }
 
   .about__comment {
@@ -339,10 +421,10 @@
   .about__to-write {
     margin-top: 0;
     width: 170px;
-    margin-right: 100px;
-    //position: absolute;
-    //top: 0;
-    //right: 0;
+    margin-left: 283px;
+    position: absolute;
+    top: 108px;
+    right: 100px;
   }
 
   .about__prev-button,
@@ -374,7 +456,7 @@
   }
 
   .about__title-wrapper--review {
-    padding-top: 101px;
+    padding-top: 87px;
     padding-left: 100px;
     padding-right: 50px;
   }
@@ -415,7 +497,7 @@
   .about__title--about {
     font-size: 53px;
     line-height: 57px;
-    margin-left: 218px;
+    margin-left: 175px;
   }
 
   .about__title--review {
@@ -426,6 +508,7 @@
 
   .about__to-write {
     margin-top: 10px;
+    margin-left: 475px;
   }
 
   .about__comment {
