--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -1,5 +1,23 @@
 .contacts {
+  //padding: 0 30px;
+}
+
+.contacts {
+  width: 320px;
+  margin: 0 auto;
+  //padding: 0;
+  //padding-top: 132px;
+  box-sizing: border-box;
+}
+
+.contacts__container {
   padding: 0 30px;
+}
+
+.write-us {
+  position: absolute;
+  top: 517px;
+  width: 255px;
 }
 
 .contacts__title {
@@ -8,9 +26,53 @@
   font-weight: bold;
   margin: 0;
   margin-top: 55px;
-  //display: flex;
-  //flex-direction: row;
-  //justify-content: space-between;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.contacts__flag--display {
+  display: none;
+}
+
+.contacts__title-text {
+  padding-top: 30px;
+}
+
+.contacts__list {
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+  display: flex;
+  flex-direction: column;
+  //align-items: flex-start;
+  font-size: 15px;
+  line-height: 30px;
+  color: #444444;
+}
+
+.contacts__item--email {
+  display: flex;
+  flex-direction: row;
+  //padding-bottom: 22px;
+  //padding-right: 20px;
+  align-items: center;
+  justify-content: space-between;
+  padding-top: 10px;
+}
+
+.contacts__item--address {
+  display: flex;
+  flex-direction: row;
+  //padding-bottom: 22px;
+  //padding-right: 34px;
+  align-items: flex-start;
+}
+
+.contacts__address {
+  padding-left: 34px;
+  line-height: 30px;
 }
 
 /*.contacts__flag--display {
@@ -71,7 +133,6 @@
   text-decoration: none;
   text-transform: uppercase;
   border: 2px solid #444444;
-  width: 100%;
   text-align: center;
   padding: 14px 0;
 }
@@ -80,9 +141,16 @@
   .contacts {
     width: 768px;
     margin: 0 auto;
-    padding: 0 50px;
-    padding-top: 77px;
+    //padding: 0 50px;
+    padding: 0;
+    padding-top: 23px;
     box-sizing: border-box;
+  }
+
+  .contacts__container {
+    padding: 0 50px;
+    box-sizing: border-box;
+    position: relative;
   }
 
   .contacts__title {
@@ -101,6 +169,15 @@
     width: 45px;
     height: 80px;
     padding-right: 5px;
+  }
+
+  .contacts__flag--display {
+    display: block;
+    padding-top: 17px;
+  }
+
+  .contacts__title-text {
+    padding-top: 15px;
   }
 
   .contacts__list {
@@ -125,6 +202,7 @@
     flex-direction: row;
     //padding-bottom: 22px;
     //padding-right: 20px;
+    padding-top: 30px;
   }
 
   .contacts__item--address {
@@ -132,6 +210,7 @@
     flex-direction: row;
     //padding-bottom: 22px;
     padding-right: 34px;
+    padding-top: 30px;
   }
 
   .contacts__address {
@@ -149,6 +228,11 @@
     color: #444444;
     letter-spacing: -0.2px;
     margin-left: -2px;
+  }
+
+  .write-us {
+    position: static;
+    width: 224px;
   }
 
   /*.contacts__flag--display {
@@ -205,12 +289,12 @@
 
   .contacts__container {
     //margin-top: 20px;
+    padding: 0;
     display: flex;
     flex-direction: column;
     justify-content: unset;
     //padding-top: 154px;
     width: 500px;
-    position: relative;
   }
 
   .contacts__list {
@@ -226,7 +310,7 @@
   .contacts__title {
     //width: 750px;
     //margin: 0 auto;
-    margin-top: 155px;
+    margin-top: 113px;
     font-size: 53px;
     line-height: 57px;
     display: flex;
@@ -257,9 +341,21 @@
     padding-left: 20px;
   }
 
-  .contacts__item--email,
-  .contacts__item--address {
+  .contacts__item--email {
+    padding-top: 37px;
+  }
 
+  .contacts__item--address {
+    padding-top: 30px;
+  }
+
+  .contacts__address {
+    padding-left: 0;
+  }
+
+  .write-us--size {
+    width: 225px;
+    margin-left: 175px;
   }
 
   /*.contacts__tbody {
