--- a/source/sass/blocks/map.scss
+++ b/source/sass/blocks/map.scss
@@ -1,5 +1,6 @@
 .map {
-  margin-top: 37px;
+  margin-top: 21px;
+  padding-bottom: 127px;
 }
 
 .map__iframe {
@@ -22,5 +23,6 @@
     //margin-right: 100px;
     margin-top: 96px;
     //margin: 0;
+    padding-bottom: 0;
   }
 }
