--- a/source/sass/blocks/site-wrapper.scss
+++ b/source/sass/blocks/site-wrapper.scss
@@ -2,11 +2,12 @@
   background-color: $main-color;
   //width: $main-width;
   //margin: 0 auto;
-  box-sizing: border-box;
+  //box-sizing: border-box;
 }
 
 .site__write--wrapper {
-  padding: 0 30px;
+  //padding: 0 30px;
+  position: relative;
 }
 
 @media (min-width: 768px) {
@@ -16,11 +17,12 @@
 
   .site__write--wrapper {
     //margin-top: 46px;
-    position: absolute;
-    bottom: -2579px;
     //left: 386px;
-    width: 224px;
+    width: 230px;
     margin: 0 auto;
+    position: absolute;
+    left: 270px;
+    top: 787px;
   }
 }
 
@@ -31,7 +33,8 @@
 
   .site__write--wrapper {
     margin-top: 80px;
-    margin-left: 145px;
-    width: 226px;
+    //margin-left: 145px;
+    width: 100%;
+    position: static;
   }
 }
