Переделал catalog.html

--- a/source/sass/blocks/catalog.scss
+++ b/source/sass/blocks/catalog.scss
@@ -1,24 +1,38 @@
 .catalog {
-  margin-top: 27px;
-  padding: 0 30px;
+  width: 260px;
+  margin: 0 auto;
+  padding-top: 31px;
   display: flex;
   flex-direction: column;
 }
 
 .catalog__item {
-  //margin-top: 27px;
   border: 1px solid #ececec;
-  //padding-bottom: 23px;
+  padding-bottom: 4px;
+  min-height: 374px;
+  box-sizing: border-box;
 }
 
 .catalog__item--mobile {
-  margin-top: 36px;
+  margin-top: 30px;
 }
 
 .catalog__image {
+  margin: 0 auto;
   width: 260px;
   height: 195px;
   background-color: #ecebe9;
+}
+
+.catalog-wrapper {
+  width: 260px;
+  min-height: 179px;
+  margin: 0 auto;
+  padding: 0 28px;
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
 }
 
 .catalog__hare {
@@ -33,24 +47,18 @@
   background-image: url("../../img/photo-toys-mobile@1x.jpg");
 }
 
-.catalog-wrapper {
-  margin-top: 26px;
-  padding: 0 28px;
-  padding-bottom: 22px;
-}
-
 .catalog__title {
   margin: 0;
   font-size: 17px;
   line-height: 24px;
   font-weight: bold;
-  letter-spacing: -0.5px;
+  letter-spacing: 0.4px;
+  box-sizing: border-box;
 }
 
 .catalog__description {
   margin: 0;
-  margin-top: 5px;
-  //padding-bottom: 30px;
+  padding-top: 5px;
   width: 100%;
   font-size: 13px;
   line-height: 30px;
@@ -59,7 +67,8 @@
 }
 
 .catalog__price-wrapper {
-  margin-top: 40px;
+  //padding-top: 40px;
+  //padding-bottom: 18px;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -68,25 +77,24 @@
 
 .catalog__price {
   margin: 0;
-  //margin-top: 10px;
-  //padding-bottom: 30px;
   font-size: 15px;
   line-height: 24px;
   font-weight: bold;
 }
 
 .catalog__films {
-  margin-top: 60px;
-  //border: 1px solid #000000;
-  width: 100%;
+  min-height: 503px;
+  margin-top: 36px;
+  border: 1px solid #ececec;
+  box-sizing: border-box;
   display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  padding-bottom: 40px;
+  flex-direction: column;
+  justify-content: space-around;
+  padding-bottom: 14px;
 }
 
 .catalog__movies {
-  margin-top: 20px;
+  //padding-top: 20px;
   position: relative;
   width: 260px;
   height: 150px;
@@ -109,12 +117,12 @@
 }
 
 .catalog__text {
+  padding-left: 30px;
+  padding-right: 30px;
   margin: 0;
   font-size: 13px;
   line-height: 24px;
-  padding: 28px 30px;
-  padding-bottom: 25px;
-  letter-spacing: 0.6px;
+  letter-spacing: 0.3px;
 }
 
 .catalog__to-order {
@@ -135,34 +143,50 @@
 .catalog__film-svg-title {
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
-  width: 350px;
+  //justify-content: space-around;
+  width: 260px;
   align-items: center;
-  margin-left: 33px;
+  //margin-left: 33px;
 
   &--order {
     order: -1;
   }
+}
 
-  .catalog__title {
-    width: 170px;
-  }
+.catalog__film-svg-icon {
+  padding-left: 34px;
+}
+
+.catalog__title--film {
+  width: 170px;
+  padding-top: 9px;
+  padding-left: 23px;
 }
 
 @media (min-width: 768px) {
   .catalog {
+    width: 670px;
+    margin: 0 auto;
     margin-top: 35px;
-    padding: 0 50px;
+    padding-bottom: 95px;
   }
 
   .catalog__title {
     font-size: 20px;
     line-height: 24px;
+    padding-top: 25px;
+  }
+
+  .catalog__description {
+    padding-left: 3px;
+    letter-spacing: 0.8px;
   }
 
   .catalog__films {
-    //flex-direction: column;
-    display: block;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 47px;
+    //display: block;
   }
 
   .catalog__price {
@@ -172,43 +196,72 @@
   }
 
   .catalog__price-wrapper {
-    margin-top: 195px;
+    //padding-top: 197px;
+    padding-top: 20px;
+    padding-bottom: 30px;
+    padding-left: 5px;
     display: flex;
     justify-content: space-between;
-    width: 280px;
+    border-top: 1px solid #cfcfcf;
+    //width: 280px;
   }
-
-  .catalog__price-wrapper--margin {
-    margin-top: 173px;
-  }
-
 
   .catalog__item {
+    //width: 670px;
+    min-height: 335px;
     display: flex;
     margin-top: 52px;
+    padding-bottom: 0;
+    box-sizing: border-box;
+  }
+
+  .catalog-wrapper {
+    margin: 0;
+    width: 315px;
+    justify-content: space-between;
+  }
+
+  .catalog__title--film {
+    width: 669px;
+    padding: 0;
+    padding-left: 35px;
+    letter-spacing: 0.2px;
   }
 
   .catalog__item--hare {
-    margin-top: 45px;
+    margin-top: 19px;
   }
 
   .catalog__image {
-    width: 330px;
+    width: 334px;
     height: 335px;
+    margin: 0;
   }
 
   .catalog__film-svg-title {
-    width: 350px;
-    margin-top: 22px;
-
-    .catalog__title--width {
+    width: 584px;
+    order: 0;
+    padding-top: 34px;
+    /*.catalog__title--width {
       width: 270px;
-    }
+    }*/
   }
 
   .catalog__text {
     font-size: 15px;
     line-height: 27px;
+    padding-top: 30px;
+  }
+
+  .catalog__text--film {
+    width: 584px;
+    padding: 0;
+    padding-top: 31px;
+    letter-spacing: 0;
+  }
+
+  .catalog__film-svg-icon {
+    padding-left: 3px;
   }
 
   .catalog__films-description {
@@ -234,26 +287,26 @@
   }
 
   .catalog__movie-play {
-    top: 40%;
-    left: 44%;
+    top: 41%;
+    left: 42%;
   }
 
   .catalog__to-order {
-    margin-top: 10px;
-    width: 580px;
-    margin-left: 40px;
+    width: 582px;
+    margin: 0 auto;
+    margin-top: 38px;
   }
 }
 
 @media (min-width: 1250px) {
   .catalog {
-    width: 1150px;
+    width: 1050px;
+    margin: 0 auto;
     flex-direction: row;
     flex-wrap: wrap;
-    //justify-content: space-around;
     justify-content: space-between;
-    margin-top: 155px;
-    padding: 0 50px;
+    margin-top: 125px;
+    //padding: 0 50px;
     box-sizing: border-box;
   }
 
@@ -265,12 +318,22 @@
     margin-top: 0;
   }
 
+  .catalog-wrapper {
+    width: 260px;
+    padding: 0;
+    margin: 0 auto;
+  }
+
   .catalog__image {
     width: 315px;
     min-height: 462px;
     background-repeat: no-repeat;
     background-position: 0 35px;
     background-size: 315px 380px;
+  }
+
+  .catalog__description {
+    padding-left: 0;
   }
 
   .catalog__hare {
@@ -288,18 +351,29 @@
     background-size: 435px 430px;
   }
 
+  .catalog__films-wrapper {
+    padding-top: 54px;
+  }
+
   .catalog__films {
-    margin-top: 55px;
+    min-height: 457px;
+    //margin-top: 55px;
+    width: 1050px;
     display: block;
+    margin-top: 0;
+    //padding-top: 50px;
   }
 
   .catalog__price-wrapper {
-    margin-top: 60px;
+    //margin-top: 60px;
+    padding-top: 20px;
+    padding-bottom: 10px;
+    padding-left: 0;
   }
 
-  .catalog__price-wrapper--margin {
+  /*.catalog__price-wrapper--margin {
     margin-top: 35px;
-  }
+  }*/
 
   .catalog__price {
     font-size: 17px;
@@ -309,7 +383,7 @@
 
   .catalog__to-order {
     margin-left: 83px;
-    margin-top: 18px;
+    margin-top: 46px;
     width: 225px;
   }
 
@@ -332,11 +406,11 @@
     top: -55px;
   }
 
-  .catalog__text {
+  .catalog__text--film {
     width: 255px;
     float: left;
-    margin-top: 15px;
-    margin-left: 53px;
+    padding-top: 33px;
+    padding-left: 80px;
     font-size: 15px;
     line-height: 30px;
   }
