--- a/source/sass/blocks/catalog-title.scss
+++ b/source/sass/blocks/catalog-title.scss
@@ -1,5 +1,6 @@
 .catalog-title {
   margin: 0;
+  margin-top: -3px;
   padding-top: 70px;
   padding-bottom: 77px;
   text-align: center;
@@ -13,7 +14,7 @@
   .catalog-title {
     font-size: 43px;
     line-height: 50px;
-    padding-top: 32px;
+    padding-top: 19px;
   }
 }
 
@@ -21,6 +22,6 @@
   .catalog-title {
     font-size: 53px;
     line-height: 57px;
-    padding-top: 30px;
+    padding-top: 18px;
   }
 }
