--- a/source/sass/blocks/top-menu.scss
+++ b/source/sass/blocks/top-menu.scss
@@ -47,7 +47,7 @@
 }
 .menu__link--logo {
   padding: 18px 30px;
-  border-bottom: 1px solid #e7e7e7;
+  //border-bottom: 1px solid #e7e7e7;
   padding-left: 115px;
   padding-top: 23px;
   padding-right: 70px;
@@ -251,7 +251,7 @@
 }
 
 .menu__link--catalog {
-  padding-left: 100px;
+  padding-left: 90px;
   padding-top: 30px;
   padding-right: 35px;
   font-size: 17px;
@@ -289,7 +289,7 @@
 }
 
 .menu__link--news {
-  padding-left: 100px;
+  padding-left: 90px;
   padding-top: 15px;
   padding-bottom: 37px;
   background-color: #f9f9f9;
