--- a/source/sass/blocks/catalog.scss
+++ b/source/sass/blocks/catalog.scss
@@ -19,14 +19,8 @@
 
 
 .catalog__image {
-  //margin: 0 auto;
   max-width: 100%;
   height: auto;
-  //background-color: #ecebe9;
-}
-
-.catalog__picture {
-  //background-color: #e7e6e4;
 }
 
 .catalog-wrapper {
@@ -56,7 +50,7 @@
   font-size: 13px;
   line-height: 30px;
   color: #828282;
-  border-bottom: 1px solid #ececec;
+  //border-bottom: 1px solid #ececec;
 }
 
 .catalog__price-wrapper {
@@ -88,10 +82,6 @@
   position: relative;
   display: flex;
   align-items: stretch;
-}
-
-.catalog__description {
-  border: none;
 }
 
 .catalog__movie-play {
@@ -137,10 +127,6 @@
   }
 }
 
-.catalog__film-svg-icon {
-  //padding-left: 34px;
-}
-
 .catalog__title--film {
   width: 170px;
   padding-top: 9px;
@@ -178,7 +164,6 @@
   }
 
   .catalog__price-wrapper {
-    //padding-top: 197px;
     padding-top: 20px;
     padding-bottom: 30px;
     padding-left: 5px;
@@ -311,7 +296,6 @@
   }
 
   .catalog__price-wrapper {
-    //margin-top: 60px;
     padding-top: 20px;
     padding-bottom: 10px;
     padding-left: 0;
@@ -336,22 +320,14 @@
     padding: 0;
     margin: 0 auto;
     margin-top: 40px;
-    //margin-left: 70px;
     order: 1;
     flex-direction: column;
     align-items: flex-start;
-
-    /*.catalog__title {
-    font-size: 20px;
-    line-height: 24px;
-    padding: 0;
-  }*/
   }
 
   .catalog__title {
     font-size: 20px;
     line-height: 24px;
-    //padding: 0;
   }
 
   .catalog__title--film {
